Revive gh-pages!

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript">document.location = 'frontend/vector.html'</script>
+    <script type="text/javascript">document.location = 'static/tabs.html'</script>
 </head>
 <body>
 </body>
