Patch in Number.isFinite if it's missing

--- a/static/tabs.html
+++ b/static/tabs.html
@@ -16,6 +16,7 @@
     </head>
     <body>
         <div id='map'></div>
+        <script src="js/polyfill.js"></script>
         <script src="js/SliderControl.js"></script>
         <script src='js/Config.js'></script>
         <script src='js/Trig.js'></script>
