--- a/static/tabs.html
+++ b/static/tabs.html
@@ -45,7 +45,7 @@
         <script src='js/VelocityView.js'></script>
         <script src='js/MapView.js'></script>
         <script src='js/TABSControl.js'></script>
-        <script src="js/L.CanvasOverlay.js"></script>
+        <script src="js/leaflet_tileloader_mixin.js"></script>
         <script src="js/L.WebGLOverlay.js"></script>
         <script src='js/tabs.js'></script>
     </body>
