Add a bootstrappy Date/Time picker widget.

--- a/tabs/static/tabs.html
+++ b/tabs/static/tabs.html
@@ -9,7 +9,11 @@
         <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.1/mapbox.css' rel='stylesheet'>
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
+        <script src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.min.js"></script>
         <script src="js/jquery.query-object.js"></script>
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css">
+        <link rel="stylesheet" href="http://tarruda.github.com/bootstrap-datetimepicker/assets/css/bootstrap-datetimepicker.min.css">
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/redmond/jquery-ui.css" type="text/css">
         <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     </head>
@@ -38,6 +42,7 @@
 
         <script src="js/polyfill.js"></script>
         <script src="js/SliderControl.js"></script>
+        <script src="js/L.DatetimePicker.js"></script>
         <script src='js/Config.js'></script>
         <script src='js/Trig.js'></script>
         <script src='js/API.js'></script>
