--- a/tabs/static/tabs.html
+++ b/tabs/static/tabs.html
@@ -10,11 +10,11 @@
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
         <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
         <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
-        <script src="http://tarruda.github.com/bootstrap-datetimepicker/assets/js/bootstrap-datetimepicker.min.js"></script>
+        <script src="js/bootstrap-datetimepicker.min.js"></script>
         <script src="js/jquery.query-object.js"></script>
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css">
-        <link rel="stylesheet" href="http://tarruda.github.com/bootstrap-datetimepicker/assets/css/bootstrap-datetimepicker.min.css">
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/redmond/jquery-ui.css" type="text/css">
+        <link rel="stylesheet" href="css/bootstrap-datetimepicker.min.css" type="text/css">
         <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     </head>
     <body>
