--- a/tabs/static/tabs.html
+++ b/tabs/static/tabs.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset=utf-8>
-        <title>Vector example</title>
-        <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no'>
-        <!-- implicitly includes leaflet, probably -->
-        <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.1/mapbox.js'></script>
-        <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.1/mapbox.css' rel='stylesheet'>
-        <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-        <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
-        <script src="js/jquery.query-object.js"></script>
-        <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.2/themes/redmond/jquery-ui.css" type="text/css">
-        <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+		<title>Vector example</title>
+        <meta charset="utf-8">       
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="js/external/jquery/jquery-ui.min.css" type="text/css">
+		<link rel="stylesheet" href="js/external/leaflet/leaflet.css" type="text/css" />
+        <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />	
+		<script src="js/external/jquery/jquery-1.12.1.min.js"></script>
+        <script src="js/external/jquery/jquery-ui.min.js"></script>
+		<script src="js/external/leaflet/leaflet.js"></script>
+        <script src="js/jquery.query-object.js"></script>        
     </head>
     <body>
-        <div id='map'></div>
+        <div id="map"></div>
 
         <!-- vertex shader -->
         <script id="vshader" type="x-shader/x-vertex">
@@ -49,7 +48,6 @@
             }
         </script>
 
-
         <script src="js/polyfill.js"></script>
         <script src="js/SliderControl.js"></script>
         <script src='js/Config.js'></script>
@@ -63,5 +61,6 @@
         <script src="js/leaflet_tileloader_mixin.js"></script>
         <script src="js/L.WebGLOverlay.js"></script>
         <script src='js/tabs.js'></script>
+		<script src='js/newappends.js'></script>
     </body>
 </html>
