added radar, etc

--- a/tabs/static/tabs.html
+++ b/tabs/static/tabs.html
@@ -56,6 +56,7 @@
         <script src='js/Models.js'></script>
         <script src='js/SaltView.js'></script>
         <script src='js/VelocityView.js'></script>
+		<script src='js/RadarView.js'></script>
         <script src='js/MapView.js'></script>
         <script src='js/TABSControl.js'></script>
         <script src="js/leaflet_tileloader_mixin.js"></script>
